--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  labels:
-    app: ecommerce-frontend
 spec:
+  type: LoadBalancer
   selector:
-    app: ecommerce-frontend
+    app: frontend       # ✅ must match Deployment
+    version: blue       # ✅ include version if pod has it
   ports:
     - protocol: TCP
-      port: 80          # Exposes port 80 outside the cluster
-      targetPort: 80  # Port on the frontend container
-  type: LoadBalancer     # Or NodePort if you're using Minikube/EKS with external LB
+      port: 80
+      targetPort: 80    # ✅ Nginx container port
