--- a/k8s/frontend-green.yaml
+++ b/k8s/frontend-green.yaml
@@ -19,6 +19,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: vincloudops/frontend:v1.0-green
+          image: 921483785411.dkr.ecr.us-east-1.amazonaws.com/frontend:v1.0-green
           ports:
             - containerPort: 80
