--- a/k8s/deployment-blue.yaml
+++ b/k8s/deployment-blue.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: backend
-          image: 921483785411.dkr.ecr.us-east-1.amazonaws.com/vin-notes-app:v1.0-blue
+          image: 921483785411.dkr.ecr.us-east-1.amazonaws.com/vin-notes-app:${VERSION_TAG}
           ports:
             - containerPort: 80
